--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,3 @@
-name: Continuous Integration (CI)
-
-## Run CI jobs on all branches by default
-on:
-  push:
-    pull_request:
-
 jobs:
   test:
     name: Run tests
@@ -12,6 +5,8 @@ jobs:
     steps:
       - name: Check out the Git repository
         uses: actions/checkout@v4
+      - name: Set permission for gradlew
+        run: chmod +x gradlew
       - name: Set up Java toolchain
         uses: actions/setup-java@v4
         with:
