--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,10 @@
+name: Continuous Integration (CI)
+
+## Run CI jobs on all branches by default
+on:
+  push:
+    pull_request:
+
 jobs:
   test:
     name: Run tests
