--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -28,7 +28,7 @@ jobs:
       id-token: write
       # Uncomment the permissions below if installing in a private repository.
       # contents: read
-      # actions: read
+      actions: write
 
     steps:
       - name: "Checkout code"
