--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -28,7 +28,7 @@ jobs:
       id-token: write
       # Uncomment the permissions below if installing in a private repository.
       # contents: read
-      actions: write
+      # actions: read
 
     steps:
       - name: "Checkout code"
@@ -61,7 +61,7 @@ jobs:
       - name: "Upload artifact"
         uses: actions/upload-artifact@97a0fba1372883ab732affbe8f94b823f91727db # v3.pre.node20
         with:
-          name: SARIF file
+          name: sarif-file
           path: results.sarif
           retention-days: 5
 
