--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,10 +35,7 @@ jobs:
         run: ./gradlew test
 
       - name: Run SonarCloud analysis
-        uses: SonarSource/sonarcloud-github-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            build sonar --info
+        run: ./gradlew build sonar --info
