--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,6 @@ jobs:
           echo "$HOME/.koyeb/bin" >> $GITHUB_PATH
 
       - name: Deploy to Koyeb
-        run: koyeb service update <SERVICE_NAME> --git-redeploy
+        run: koyeb service update eshop --git-redeploy
         env:
           KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}
