--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,10 @@
 name: Deploy to Koyeb
 
 on:
-  workflow_run:
-    workflows: ["Scanning code with SonarCloud", "Continuous Integration (CI)", "Scorecard supply-chain security"]
-    types:
-      - completed
-    branches:
-      - master
+  workflow_dispatch:
 
 jobs:
   deploy:
-    if: |
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.head_branch == 'master' &&
-      contains(fromJson('["Scanning code with SonarCloud", "Continuous Integration (CI)", "Scorecard supply-chain security"]'), github.event.workflow_run.name)
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
@@ -21,7 +12,7 @@ jobs:
 
       - name: Install Koyeb CLI
         run: |
-          curl -fsSL https://cli.koyeb.com/install.sh | sh
+          curl -fsSL https://raw.githubusercontent.com/koyeb/koyeb-cli/master/install.sh | sh
           echo "$HOME/.koyeb/bin" >> $GITHUB_PATH
 
       - name: Deploy to Koyeb
