--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,6 @@ jobs:
           echo "$HOME/.koyeb/bin" >> $GITHUB_PATH
 
       - name: Deploy to Koyeb
-        run: koyeb service redeploy eshop
+        run: koyeb service redeploy mir4na/eshop
         env:
           KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}
