--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,6 @@ jobs:
           echo "$HOME/.koyeb/bin" >> $GITHUB_PATH
 
       - name: Deploy to Koyeb
-        run: koyeb service redeploy mir4na/eshop
+        run: koyeb service redeploy 02f95183-5174-44af-b687-4cf9d14e4f1f
         env:
           KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}
