--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,48 +2,95 @@ name: Deploy to Koyeb
 
 on:
   workflow_run:
-    workflows:
-      - "Continuous Integration (CI)"
-      - "Scorecard supply-chain security"
-      - "Scanning code with SonarCloud"
+    workflows: ["ci.yml", "scorecard.yml", "build.yml"]
     types:
       - completed
 
 jobs:
-  deploy:
-    if: |
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.head_branch == 'master' &&
-      !contains(github.event.workflow_run.head_repository.full_name, 'dependabot')
+  check-workflow-status:
     runs-on: ubuntu-latest
+    outputs:
+      all_success: ${{ steps.check-status.outputs.all_success }}
     steps:
-      - name: Check workflow status
-        id: check_workflows
-        run: |
-          ci_status=$(gh api repos/${{ github.repository }}/actions/runs?branch=master&event=push&status=completed&per_page=1&workflow_file=ci.yml --jq '.workflow_runs[0].conclusion')
-          scorecard_status=$(gh api repos/${{ github.repository }}/actions/runs?branch=master&event=push&status=completed&per_page=1&workflow_file=scorecard.yml --jq '.workflow_runs[0].conclusion')
-          build_status=$(gh api repos/${{ github.repository }}/actions/runs?branch=master&event=push&status=completed&per_page=1&workflow_file=build.yml --jq '.workflow_runs[0].conclusion')
-          
-          if [ "$ci_status" = "success" ] && [ "$scorecard_status" = "success" ] && [ "$build_status" = "success" ]; then
-            echo "should_deploy=true" >> $GITHUB_OUTPUT
-          else
-            echo "should_deploy=false" >> $GITHUB_OUTPUT
-          fi
+      - name: Check status of ci.yml
+        id: check-ci
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { data: ci } = await github.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'ci.yml',
+              branch: 'master',
+              event: 'push',
+              status: 'completed',
+              per_page: 1
+            });
+            return ci.workflow_runs[0].conclusion === 'success';
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
 
+      - name: Check status of scorecard.yml
+        id: check-scorecard
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { data: scorecard } = await github.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'scorecard.yml',
+              branch: 'master',
+              event: 'push',
+              status: 'completed',
+              per_page: 1
+            });
+            return scorecard.workflow_runs[0].conclusion === 'success';
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+
+      - name: Check status of build.yml
+        id: check-build
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { data: build } = await github.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'build.yml',
+              branch: 'master',
+              event: 'push',
+              status: 'completed',
+              per_page: 1
+            });
+            return build.workflow_runs[0].conclusion === 'success';
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+
+      - name: Verify all workflows succeeded
+        id: check-status
+        run: |
+          if [[ "${{ steps.check-ci.outputs.result }}" == "true" && \
+               "${{ steps.check-scorecard.outputs.result }}" == "true" && \
+               "${{ steps.check-build.outputs.result }}" == "true" ]]; then
+            echo "all_success=true" >> $GITHUB_OUTPUT
+          else
+            echo "all_success=false" >> $GITHUB_OUTPUT
+          fi
+
+  deploy:
+    needs: check-workflow-status
+    if: ${{ needs.check-workflow-status.outputs.all_success == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
       - name: Check out repository
-        if: steps.check_workflows.outputs.should_deploy == 'true'
         uses: actions/checkout@v4
 
       - name: Install Koyeb CLI
-        if: steps.check_workflows.outputs.should_deploy == 'true'
         run: |
           curl -fsSL https://raw.githubusercontent.com/koyeb/koyeb-cli/master/install.sh | sh
           echo "$HOME/.koyeb/bin" >> $GITHUB_PATH
 
       - name: Deploy to Koyeb
-        if: steps.check_workflows.outputs.should_deploy == 'true'
         run: koyeb service redeploy unfair-smelt/eshop
         env:
           KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}
