--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,12 @@
 name: Deploy to Koyeb
 
 on:
+  push:
+    paths-ignore:
+      - 'README.md'
+  pull_request:
+    paths-ignore:
+      - 'README.md'
   workflow_run:
     workflows: ["Continuous Integration (CI)", "Scorecard supply-chain security", "Scanning code with SonarCloud"]
     types:
