adjust paths-ignore

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,11 @@ name: Scanning code with SonarCloud
 
 on:
   push:
+    paths-ignore:
+      - 'README.md'
   pull_request:
+    paths-ignore:
+      - 'README.md'
 
 jobs:
   build-and-analyze:
